prepare to send to production. Bug on extra space after resume continues. Its need fixed

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -6,9 +6,12 @@
   @include display-flex();
   // width: 100%;
   // min-height: 100vh; // ocupa a tela toda
-  height: 100vh;
   height: 100dvh;
   // padding-bottom: 1rem;
+  
+  @include breakpoint($lg){
+   height: 100vh;
+  }
 
   @include breakpoint($sm){
     height: auto;
@@ -33,7 +36,7 @@
     flex: 1; // ocupa todo o espaço restante
     padding: 1rem;
     background-color: $white;
-    overflow-y: auto;
+    // overflow-y: auto;
     width: 100%;
     //REMOVIDOS PARA RESOLVER BUG ESPACO GRANDE NOS RESUMOS
     // height: 100vh;
@@ -42,8 +45,8 @@
 
     //NOVO CSS PARA RESOLVER BUG
     // min-height: 100vh;
-     min-height: calc(100dvh - 54px);
-    // overflow-y: auto;
+    min-height: calc(100dvh - 54px);
+    overflow-y: auto;
     @include breakpoint($lg){
       min-height: calc(100vh - 54px);
     }
